# window-observer-rs

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
examples/: macos_permission.rs  print_active_window.rs  print_window_events.rs  window_observer_app.rs
src/: lib.rs  window.rs
src/platform_impl/: macos.rs  mod.rs
src/platform_impl/macos/: ax_error.rs  ax_function.rs  ax_observer.rs  binding_ax_function.rs  binding_ax_observer.rs  error.rs  error_helper.rs  event.rs  event_helper.rs  event_interpreter.rs  event_loop.rs  function.rs  helper.rs  mod.rs  observer.rs  thread.rs  window.rs  window_observer.rs
src/platform_impl/windows/: callback.rs  error.rs  event.rs  event_interpreter.rs  helper.rs  hook_task.rs  mod.rs  observer.rs  task.rs  window.rs
