[package]
name = "window-observer"
description = "The library for observing information about the windows."
version = "0.1.0"
edition = "2021"
authors = ["Takagi Tasuku <tasuren@outlook.jp>"]
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/tasuren/window-observer-rs"
keywords = ["window", "observer", "window-observer", "windows", "macos"]
categories = ["os::windows-apis", "os::macos-apis"]

[features]
default = []
macos-private-apis = []

[dependencies]
smallvec = "1.15.1"
thiserror = "1.0.69"
tokio = { version = "1.45.1", default-features = false, features = ["sync"] }
window-getter = { git = "https://github.com/tasuren/window-getter-rs.git" }

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.61.3"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Accessibility",
]

[target.'cfg(target_os = "windows")'.dependencies]
wineventhook = "0.9.1"

[target.'cfg(target_os = "macos")'.dependencies]
accessibility = "0.2.0"
accessibility-sys = "0.2.0"
core-foundation = "0.10.0"
objc2 = "0.6.1"

[target.'cfg(target_os = "macos")'.dependencies.objc2-foundation]
version = "0.3.1"
default-features = false
features = ["alloc", "NSNotification"]

[target.'cfg(target_os = "macos")'.dependencies.objc2-core-foundation]
version = "0.3.1"
default-features = false
features = ["CFString", "CFRunLoop"]

[dev-dependencies]
tokio = { version = "1.45.1", features = ["rt", "macros", "rt-multi-thread"] }
