[package]
name = "window-observer"
description = "The library for observing information about the windows."
version = "0.1.0"
edition = "2024"
authors = ["Takagi Tasuku <tasuren@outlook.jp>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/tasuren/window-observer-rs"
keywords = ["window", "window-observer", "windows", "macos"]
categories = ["os::windows-apis", "os::macos-apis"]

[features]
default = []
macos-private-api = []

[dependencies]
bitflags = "2.10.0"
thiserror = "2.0.17"
tokio = { version = "1.48.0", default-features = false, features = ["sync"] }
window-getter = "0.1.2"

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.62.2"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Accessibility",
]

[target.'cfg(target_os = "windows")'.dependencies]
wineventhook = "0.9.1"

[target.'cfg(target_os = "macos")'.dependencies]
accessibility = "0.2.0"
accessibility-sys = "0.2.0"
core-foundation = "0.10.1"
objc2 = "0.6.3"

[target.'cfg(target_os = "macos")'.dependencies.objc2-foundation]
version = "0.3.2"
default-features = false
features = ["alloc", "NSNotification"]

[target.'cfg(target_os = "macos")'.dependencies.objc2-core-foundation]
version = "0.3.2"
default-features = false
features = ["CFString", "CFRunLoop"]

[dev-dependencies]
tokio = { version = "1.48.0", features = ["rt", "macros", "rt-multi-thread"] }
